ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  namespace: prod
spec:
  selector:
    app: customers-service
  ports:
    - name: customers-service
      protocol: TCP
      port: 5003
      targetPort: 5003
